--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^0.0.10",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "ai": "^3.2.16",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
