--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
+    "react-use": "^17.5.1",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.5",
