--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
     "ai": "^3.2.16",
     "autoprefixer": "10.4.17",
@@ -33,6 +34,7 @@
     "next": "latest",
     "next-themes": "^0.3.0",
     "postcss": "8.4.33",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
