--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-three/fiber": "^8.17.5",
     "@supabase/ssr": "latest",
@@ -27,7 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^11.5.4",
     "geist": "^1.2.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.399.0",
@@ -53,7 +54,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "tsparticles-slim": "^2.12.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
