--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "@ai-sdk/azure": "^0.0.10",
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -42,6 +45,7 @@
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
