--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ai-sdk/azure": "^0.0.10",
     "@gsap/react": "^2.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,7 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.11.7",
     "geist": "^1.2.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.399.0",
