--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^0.0.10",
+    "@ai-sdk/azure": "^0.0.48",
+    "@ai-sdk/provider": "^0.0.24",
+    "@ai-sdk/ui-utils": "^0.0.46",
+    "@azure/openai": "^2.0.0-beta.2",
     "@gsap/react": "^2.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -27,7 +30,7 @@
     "@tsparticles/slim": "^3.5.0",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
-    "ai": "^3.2.16",
+    "ai": "^3.4.16",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
