--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@types/jsdom": "^21.1.7",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
     "ai": "^3.4.16",
@@ -38,6 +39,7 @@
     "framer-motion": "^11.11.7",
     "geist": "^1.2.1",
     "gsap": "^3.12.5",
+    "jsdom": "^25.0.1",
     "lucide-react": "^0.399.0",
     "next": "latest",
     "next-themes": "^0.3.0",
