--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/jsdom": "^21.1.7",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
+    "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
     "ai": "^3.4.16",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
