--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@ai-sdk/ui-utils": "^0.0.46",
     "@azure/openai": "^2.0.0-beta.2",
     "@gsap/react": "^2.1.1",
-    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-email/components": "^0.0.26",
     "@react-three/fiber": "^8.17.5",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -58,6 +60,7 @@
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.1",
+    "resend": "^4.0.1-alpha.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.5",
