adding azure key to .env

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 # NEXT_PUBLIC_ROOT_DOMAIN=aiwebsitebuilder.tech
 NEXT_PUBLIC_ROOT_DOMAIN=localhost:3000
 RESEND_API_KEY=re_Mwxqvm2Z_L46XZTyeAxaWEEDfTjM6nt4i
+AZURE_RESOURCE_NAME=AnswerAI-bilal
+AZURE_API_KEY=523a50ed7a7444468d1ae5a384f032bf
