--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
+    "react-syntax-highlighter": "^15.6.1",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.1",
     "resend": "^4.0.1-alpha.0",
@@ -76,6 +77,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "daisyui": "^4.12.10",
     "encoding": "^0.1.13"
   }
