--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ai-sdk/provider": "^0.0.24",
     "@ai-sdk/ui-utils": "^0.0.46",
     "@azure/openai": "^2.0.0-beta.2",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@gsap/react": "^2.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
