--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cobe": "^0.6.3",
     "framer-motion": "^11.11.7",
     "geist": "^1.2.1",
+    "globby": "^14.0.2",
     "gsap": "^3.12.5",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.399.0",
