--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test-auth": "node -r dotenv/config --loader ts-node/esm scripts/test-gcloud-auth.mts"
   },
   "dependencies": {
     "@ai-sdk/azure": "^0.0.48",
@@ -42,9 +43,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.7",
     "geist": "^1.2.1",
     "globby": "^14.0.2",
+    "google-auth-library": "^9.14.2",
     "gsap": "^3.12.5",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.399.0",
@@ -84,6 +87,7 @@
     "@types/react-dom": "18.2.18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "daisyui": "^4.12.10",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "ts-node": "^10.9.2"
   }
 }
