--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@react-email/components": "^0.0.26",
     "@react-three/fiber": "^8.17.5",
     "@sparticuz/chromium": "^119.0.2",
