--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/openai": "^2.0.0-beta.2",
     "@emotion/is-prop-valid": "^1.3.1",
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
