--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
@@ -36,6 +37,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/jsdom": "^21.1.7",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
@@ -43,11 +45,12 @@
     "@vercel/speed-insights": "^1.0.14",
     "ai": "^3.4.16",
     "autoprefixer": "10.4.17",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.11.7",
+    "framer-motion": "^11.12.0",
     "geist": "^1.2.1",
     "globby": "^14.0.2",
     "google-auth-library": "^9.14.2",
