--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@gsap/react": "^2.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
+    "@next/third-parties": "^15.1.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
