--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@gsap/react": "^2.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.3",
     "@next/third-parties": "^15.1.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -59,11 +62,13 @@
     "geist": "^1.2.1",
     "globby": "^14.0.2",
     "google-auth-library": "^9.14.2",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "jsdom": "^25.0.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.399.0",
     "next": "latest",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.33",
     "prismjs": "^1.29.0",
