--- a/package.json
+++ b/package.json
@@ -100,8 +100,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.6",
+    "@types/hast": "^3.0.4",
+    "@types/mdx": "^2.0.13",
     "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "18.2.18",
     "@types/react-syntax-highlighter": "^15.5.13",
     "daisyui": "^4.12.10",
