--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ai-sdk/azure": "^0.0.48",
     "@ai-sdk/provider": "^0.0.24",
     "@ai-sdk/ui-utils": "^0.0.46",
+    "@azure/communication-email": "^1.0.0",
     "@azure/openai": "^2.0.0-beta.2",
     "@emotion/is-prop-valid": "^1.3.1",
     "@gsap/react": "^2.1.1",
