--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-email/components": "^0.0.26",
+    "@react-email/render": "^1.0.4",
     "@react-three/fiber": "^8.17.5",
     "@sparticuz/chromium": "^119.0.2",
     "@supabase/ssr": "latest",
