--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
@@ -78,6 +78,7 @@
     "puppeteer-core": "^10.1.0",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
+    "react-day-picker": "^9.5.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icon-cloud": "^4.1.4",
