--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.33",
+    "posthog-js": "^1.215.1",
     "prismjs": "^1.29.0",
     "puppeteer-core": "^10.1.0",
     "react": "18.2.0",
