--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.33",
     "posthog-js": "^1.215.1",
+    "posthog-node": "^4.7.0",
     "prismjs": "^1.29.0",
     "puppeteer-core": "^10.1.0",
     "react": "18.2.0",
@@ -91,6 +92,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.1",
+    "recharts": "^2.15.1",
     "resend": "^4.0.1-alpha.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
