--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@ai-sdk/azure": "^0.0.48",
+    "@ai-sdk/google-vertex": "^2.1.29",
     "@ai-sdk/provider": "^0.0.24",
     "@ai-sdk/ui-utils": "^0.0.46",
     "@azure/communication-email": "^1.0.0",
     "@azure/openai": "^2.0.0-beta.2",
     "@emotion/is-prop-valid": "^1.3.1",
+    "@google/generative-ai": "^0.24.0",
     "@gsap/react": "^2.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@mdx-js/loader": "^3.1.0",
@@ -49,11 +51,12 @@
     "@tsparticles/slim": "^3.5.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/jsdom": "^21.1.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/prismjs": "^1.26.4",
     "@types/three": "^0.167.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "ai": "^3.4.16",
+    "ai": "^4.1.61",
     "autoprefixer": "10.4.17",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
@@ -64,7 +67,7 @@
     "framer-motion": "^11.12.0",
     "geist": "^1.2.1",
     "globby": "^14.0.2",
-    "google-auth-library": "^9.14.2",
+    "google-auth-library": "^9.15.1",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "jsdom": "^25.0.1",
@@ -73,6 +76,7 @@
     "next": "latest",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
     "postcss": "8.4.33",
     "posthog-js": "^1.215.1",
     "posthog-node": "^4.7.0",
@@ -102,7 +106,6 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "tsparticles-slim": "^2.12.0",
-    "typescript": "5.3.3",
     "vanilla-tilt": "^1.8.1",
     "zod": "^3.23.8"
   },
@@ -116,6 +119,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "daisyui": "^4.12.10",
     "encoding": "^0.1.13",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
