Enhance website creation and integration features
- Update the NewWebsiteDialog component to introduce a tabbed interface for Express and Pro website creation, allowing users to choose their preferred method.
- Implement a prompt input for the Express mode, replacing the previous description field, to guide AI in generating website content.
- Refactor the API calls in the handleCreateExpress and handleCreatePro functions to streamline website creation and integrate with the new prompt structure.
- Update layout components to include Google Fonts and improve overall UI consistency.
- Remove outdated task documentation related to Gemini model integration and website publishing.

--- a/.env
+++ b/.env
@@ -33,3 +33,9 @@ GOOGLE_VERTEX_LOCATION=us-central1
 GOOGLE_VERTEX_PROJECT_ID=eng-venture-439304-b2
 GOOGLE_VERTEX_PROJECT=eng-venture-439304-b2
 
+# AWS Credentials (for Bedrock)
+AWS_ACCESS_KEY_ID=AKIAUW4RBFVB6DHQEWEB
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-west-2
+GOOGLE_APPLICATION_CREDENTIALS=./config/eng-venture-439304-b2-e35a1a57ca06.json
+GOOGLE_FONTS_API_KEY=AIzaSyBlMTWRBGNwN091TzW8NHLbdFXe5a41_6o
