--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^2.2.1",
     "@ai-sdk/azure": "^0.0.48",
+    "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/google-vertex": "^2.1.29",
     "@ai-sdk/provider": "^0.0.24",
     "@ai-sdk/ui-utils": "^0.0.46",
+    "@aws-sdk/client-bedrock-runtime": "^3.775.0",
     "@azure/communication-email": "^1.0.0",
     "@azure/openai": "^2.0.0-beta.2",
     "@emotion/is-prop-valid": "^1.3.1",
@@ -29,7 +32,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
@@ -38,7 +41,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.26",
     "@react-email/render": "^1.0.4",
     "@react-three/fiber": "^8.17.5",
@@ -56,20 +59,22 @@
     "@types/three": "^0.167.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "ai": "^4.1.61",
+    "ai": "^4.2.6",
     "autoprefixer": "10.4.17",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.12.0",
+    "dotenv": "^16.4.7",
+    "font-picker-react": "^3.5.2",
+    "framer-motion": "^11.18.2",
     "geist": "^1.2.1",
     "globby": "^14.0.2",
     "google-auth-library": "^9.15.1",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
+    "immer": "^10.1.1",
     "jsdom": "^25.0.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.399.0",
@@ -90,13 +95,15 @@
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.6.1",
     "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.1",
     "recharts": "^2.15.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.0.1-alpha.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
@@ -107,7 +114,8 @@
     "three": "^0.167.1",
     "tsparticles-slim": "^2.12.0",
     "vanilla-tilt": "^1.8.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/estree": "^1.0.6",
